# ChangeLog for dev-python/cytoolz
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cytoolz/ChangeLog,v 1.7 2015/03/18 05:10:57 idella4 Exp $

*cytoolz-0.7.2-r1 (18 Mar 2015)

  18 Mar 2015; Ian Delaney <idella4@gentoo.org> +cytoolz-0.7.2-r1.ebuild,
  -cytoolz-0.7.0.ebuild:
  revbump; add test phase, dep nose and upstream bug in comment

*cytoolz-0.7.2 (17 Mar 2015)

  17 Mar 2015; Patrick Lauer <patrick@gentoo.org> +cytoolz-0.7.2.ebuild:
  Bump

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> cytoolz-0.7.1.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> cytoolz-0.7.1.ebuild:
  amd64 stable, bug 540290

  03 Jan 2015; Ian Delaney <idella4@gentoo.org> cytoolz-0.7.1.ebuild:
  drop pypy support

*cytoolz-0.7.1 (24 Dec 2014)

  24 Dec 2014; Ian Delaney <idella4@gentoo.org> +cytoolz-0.7.1.ebuild:
  bump; add pypy support, fix to qa issue

*cytoolz-0.7.0 (02 Sep 2014)

  02 Sep 2014; Patrick Lauer <patrick@gentoo.org> +cytoolz-0.7.0.ebuild,
  +metadata.xml:
  Initial import, dependency of dev-python/blaze