@@ -4,14 +4,13 @@ Hash: SHA256
 DIST cytoolz-0.7.1.tar.gz 250988 SHA256 297b3cf8606afc3332e0d0b0da707b306f8cec6f8f9a962a04181caee9bbf27e SHA512 742acde6316d5fe0cda1cb7be86812ad79bad9b5402e3b7d3d29f22afce3222d14fa8fe5a41d9cb2f3a3745f6a7ca5db3395873a5dee3e55c661fc01bfa3b007 WHIRLPOOL a54572e85e160fb7dda5eeb3ef2e5c4aca9c4e5a390321112783cfad1e40100d37eb0d763d92d3335a4ffab50bb562ce7f8138b9bc4a5722ddbd115f625baad1
 DIST cytoolz-0.7.2.tar.gz 281930 SHA256 0800949df710aa487f52b1a9f97d8844e81e07067d6ec95581b1b792c098c159 SHA512 3423b25687b143e5c80bafbb20c1220f3030348844dc753c25e5aebd9ce0b0d3c571b386138c9f6d6546c22cd5a3f1ff73e0c2ae6ee5ad1f7607d90cc7e2da3c WHIRLPOOL bffb53e662aac32eacb7222103f79c89b8708628508e5fd6326a2bffbc30cd2a422b554c18acb537e7803cb80d1f9e6aee4501505f905358af9b19d4adf15ec1
 EBUILD cytoolz-0.7.1.ebuild 716 SHA256 65a8cbfa5aab1c367444b738493bfa73d15855a9dafee220a4a5eaf0ae5e3929 SHA512 0411130a32e69213364dc89432b46f602c768a8f7b362317cedddf9aefa3fd464d6eca8140a99d1d8bd4bb464093634d40de2c7bf531ebe98c62d4e8cb327764 WHIRLPOOL 67a6c377ee9896717538ea4ef89ac8bc18d1f58cd4a9ecd1c15cf2b5ce5103b9038ffb34ca2f86c4ce183533e1b9250b50215325cf5f3ec9556f4a22d823d840
-EBUILD cytoolz-0.7.2-r1.ebuild 986 SHA256 92e8b137669c7af2918d82b6bcd7fe7899c78924a88aa0d7d833169887d40c8e SHA512 804d1398082537d8ff0354f4ef04650b14f256a7dbd1bce9e5e5969827933eccb933332d8e7d5952a6babbd535c38ef33cf28ce9c8e9e5d7bd6d9ca6e64facc9 WHIRLPOOL 966027907f443a717505876b93714883266af67db615b9a83b61cd15ae31dace6fa782aeb1989e6e3bb8e6e32dfe5eddc8fb4aed609d7264031cc27e4031fb55
-EBUILD cytoolz-0.7.2.ebuild 720 SHA256 e3ff6777ddf3ff8585a18a88e47940b646fe41429bd316b5c2485ed78fcc8c50 SHA512 5899230de85b5f466f460e7021dcff0f66a5c1108e2e72f311973da2cff27216696a4364debaaa66986a4cc983add626d1725dead3bbbd16cb42694e2f5cfdc3 WHIRLPOOL 8f47692de395cc5db8978544cb9511a442e02a9a6c3a0ab09f652c2e15ab3c6fa3aa744ec3a31ac6a3f95dfa8a250fa07a3b0b1f777e172113ecf584805b3eae
-MISC ChangeLog 1112 SHA256 1d471fb25ab24a421796a46fc1eb8834227ac27d13184236168b2468255b01c3 SHA512 4e965691b9c3192c607151213114d88bff70d5a3c83619acf83d93604188ab97b702d69a4a2bae80949c4c869730012a09b56294deeb0d625e4b64c8726af053 WHIRLPOOL 3720f9d9e5701465598d4079c77f239d3316d0d12e54c957886138de79a218c493d47b9eb54016b87889631bbd543bdd59ac763125038fc13cfb141fc2fffcde
+EBUILD cytoolz-0.7.2-r2.ebuild 1181 SHA256 7cc12efcd4ccabd3e5badd60d66b61c79ae2aaeb5e9b33db2ae5cffcd1533faf SHA512 aef4fa4f44eb62f3f940053e785d2a88fea5d3bfd8a05ce32a98f7d70d24f5e1332f22e653847bff8a6b8c01030428bec21fff8c02c4a030b87ac2a17aab7cb0 WHIRLPOOL 0bc020e92d93d12df5cf81f4a4e233228bbb171f179d760a19deadfa667c15a3a6842853ef2f05d69d379b370518785a0a78be0ac0e72bc426d3ac855bb046a5
+MISC ChangeLog 1332 SHA256 2285e5213dfd29cec11de6db2bd3d1f3edc8ae02d1bf4e5bbf57e3be4c87ecde SHA512 c1889d802b2626d79c824bfcb23ccdc0529ac1c3165e2b8578b52b5086925cfa294abb716ecc37842573c6a614647285b92c15bbb0be773eddc59300bb871bde WHIRLPOOL e459dbcdf29069c1e3c91d833d4e51166418560cafca6ebb69dca66ea666a6da8774250c6e73086e34debaaa8f02796ab3cf7832cca1e7b5160fb465a1411d12
 MISC metadata.xml 230 SHA256 441cc76bc8b9644901575e04a02cb5b5571d5b64778f78814eda95935cfb59c4 SHA512 39e86d36b4b7606150a38160e7270dedfbe86c390ee719d66491fd9ca8e31f16dc67a8f5851ee4d75dfb07b0159694ac595f5d3c2083278af0f59ee0124038cc WHIRLPOOL 7fab08699e2c1aafee7856fc1f940fa56cc92f59cfc0b78a7d044cfe7a5165c6f10e8e1870432eb7710c9f7edd3dcc8fd3b7742aa79c9a9c435730e3e29e8df5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUJCPIACgkQso7CE7gHKw2pkACeP4CRLVJt2LZcEYEi06YkEPvC
-ZaAAn3mlFtuxCQfssZlw1TlJ9BM5XIxu
-=mvHb
+iEYEAREIAAYFAlUKV5gACgkQso7CE7gHKw329QCguYyjJ7Z1rMk72nHCDhiMuadU
+EvwAoNIHH2Jh/f3VBBMDu1DRe/YewvWy
+=xtRI
 -----END PGP SIGNATURE-----
