@@ -1,10 +1,12 @@
+DIST pgmagick-0.5.10.tar.gz 39826 SHA256 89274107200a84e56e0fc4f6c482fd3b865d28c820c6d3e81cdbd4089e2dd233 SHA512 a5b05c50e8ffd61dc84547d7dcba7d47b4d31d19b00c372eac84324faa9b88194ef3283224a60ce0bc17fa1de8f22cec188dc03388fb119ace7c4b6c6eab875f WHIRLPOOL aeaee541af0ebc6f474fc20a5b38d635cd27602594602d7132ab96cc11172509fa5218e71719a46792a7dfe63872a30ef11019c92eb0d0bb433a468de59b7494
 DIST pgmagick-0.5.6.tar.gz 42116 SHA256 bddc8f545645831bf1de817e4d99f7c3a1eaa076bac6a6c4101c28ddf52f5b86 SHA512 40d008b7ccf2ed53535e463aebcaa0277dbe20aa34061eeb95bdb3f529c609159bb6d6a7fedbfa5371f504bc9abe1721dc04c96f72fe1eb88fc0a7e8699d8fc0 WHIRLPOOL d237b5a6ea136122814a02106408adaf45b40e33d39b550a4f305b4bacaf70dad2d07806f1252e4e984f037262150b067a4604a16fa893274d989c31f3e4136a
 DIST pgmagick-0.5.7.tar.gz 39311 SHA256 0439eb879e0494113ea7adb704513b90b64a7bbadbbdd79809ef1f71570e5a33 SHA512 18f9b00c0cbff616af22ea4fcf33cd0fd1cf0d6be0807adfd7e96240a663c187b2593d7c4154d506ea03ad5886d7c7fdd0b108c3524e35cd654e6635d5f70ea3 WHIRLPOOL 5b70f2d5c2c25e474e4496dcb5db077690e6b89783446e6149b1f493d9a411d7c913c6177419ce164db438fb363f38d81b9414a3d7e700bc053e5675121f4244
 DIST pgmagick-0.5.8.tar.gz 39682 SHA256 b0967586daad9b977424a791af0b93573b67b957f9413ca92a26af25e86096d7 SHA512 fffb32569ab63409fc56c0f85628d5d0116a7113abbfee96c9ebeba1a3135a88b3f3d6f8694c90efdf5e53c9f64f3a22c5d13285950ca47d95669b4465cc53a3 WHIRLPOOL 454c0509f0e1d9d0bbe3c6bae178f66b492cec81db2d7569078b1ce665c48ca525e6eba4be568d6974793150752c726da45d529273ec4d1b5a1dc4c7c64daf5f
 DIST pgmagick-0.5.9.tar.gz 39671 SHA256 392850b304427959cfad56424652fb9792a9267aaa4462a68fa57bcc1b8feb01 SHA512 cb96b5dc793c42c0e2f5baad16d9734993f4be03b06152709e5081c501543c76eca461d91e8c9b17ef997c6d4016c04c5bfc5e4b087514eab7f390d8d8a37b46 WHIRLPOOL b11e68ae03fea5d0e6810c26ecc9720f195f97a75d95a3dbbd85ebe98b55a2b0957d02b9a85ed9c30442ed13835668bd3b72c2a272043f13a21d97dae72ac167
+EBUILD pgmagick-0.5.10.ebuild 863 SHA256 68a99f622dd1d99f34c3000659a062b84cfdfdeef6a60f53cce9f4007f3e5709 SHA512 c3f7f5c1ce7d3d1944fe8ccb75fe6877b25d08eec4e4b677fe878c6864fd80272b1914fbe2c70c5b8e334637e9cf24647ffccb3237cca7c6338465f9645046f2 WHIRLPOOL 848b60eefed14fd3ec39a7cd80501ede7e8b135b580cdf18c6b124d71045d2ac501aa9e35ffd2926dd6d3eca7b7b917bd0fb3ca399580ce034c63cb9e6553ac1
 EBUILD pgmagick-0.5.6.ebuild 696 SHA256 747bee202542e01fb0415bd855d97431fd3747d75ff393444dc06aa572e3b990 SHA512 a455c6b6f97006fb288b98501966660b40c70ae8e238997ddbf03c51d0a0b378d6ce386ac7e0daa04662e34fe9211216cac9633bc61ab2c8c27693ea44f0e4aa WHIRLPOOL cdcdf16ae712420aba522759981c72b9c9441f5ccc74f5b172c2b20ccf16b1d3c189ccc63baf482ed487e9c391492778527526316380f5bff85a7d4422a03483
 EBUILD pgmagick-0.5.7.ebuild 696 SHA256 26cd5bd55d3a5f4f408acd90a0e2ce999b4c926f809c5a6f09c3f91288080edc SHA512 240499dc4305745401454619663b64bf27afdec65f75acd9cad7d0ae2840f5c500af57b70a72406afdff482d9226e8eec945303a304eca9e1d3293d1f9f6e613 WHIRLPOOL c7643eb2937cd2a3131054c178bde8e3f8fb157622c4a971011ef6a5bfe243d24801fb0a1c8610da5322862a6badce6cb21c230286e9f87e8b9369f8b8e14af6
 EBUILD pgmagick-0.5.8.ebuild 862 SHA256 bd1dcd8cdf1a030628ace7a57e9c88f94ab48dbfe5a8fcfb07037231b7fd64de SHA512 822f4ce7c1d0d1344db32110a9e2cf933e9dd6395e22c25021773f45a8bd63c31f64af414b871152cc111e810ec2660f1232f1d61feb47447f4e5eca948fdb66 WHIRLPOOL c717be76a6155dfed711c708e01a13a23770d9ebec216d251a71e6ad2a7974a4a33e426f66c494f3802c820ecc9d3ea074a55e9cc5032b448917236fd53d119d
 EBUILD pgmagick-0.5.9.ebuild 862 SHA256 9b5b1dea825f3acac6fece3106c057c7b1af20f0946dcc097629ed2e4080fdaf SHA512 8d1e031022638e01a04337514886d90177009740d05270005b2c1867f54a3a70ddac09ed9dbb5040f62cf57bf454abd6e5d1106a9bd336d0c51b0ad7a3a316bc WHIRLPOOL ddfd5e3104504ffbde01b6e315562e804d8cb14f7b58011996169d76cbbe04a9be02106d0e5ef4d041d97863517f432ab22d0d5fb38cbb19ddbf3f6bd200cd24
-MISC ChangeLog 1032 SHA256 713dddf4074a12b9153e4d6266c4f65a76d464c34a3683e16d45886698cf6ad4 SHA512 080774fc983aebb88f5116099a47feafa704baa34f3b7e862f7e9e67525a50046763554f16ba08a9a293c008fab474fe760c807fb1d2144ce1076f9969a55873 WHIRLPOOL d2a25a10e5403dc5a841757664425d57826020773788d9d9c5ed7f5c1da23ea20434e567363fa8adc20b78aa1ab4ac12a247c20f3957aaac904a1af81a4692ad
+MISC ChangeLog 1147 SHA256 de9677f280284977fda3ba363d287c118bb7fff2429da3cf83a417be579112f7 SHA512 71b17f0e1d6a4e99886965421b1538055a32efc5c6a73849a54c123f767ca9b86fe7d000a5271bed0098288ab4ac736a6f300313ce549dc97bcdaa873df8d184 WHIRLPOOL f3662bb35d5f62ddb218bcab448a954ee7352cc8ecc1d76fb360607a6641e11af5e449914f252ce4e1fd47d5f1a74ca0e4c84228ea9e491d526cdee10923d86f
 MISC metadata.xml 289 SHA256 3f911c2d0a70369fcbf217eca928ca7e185823d52ff4b90c1b1d3e3adcd9049b SHA512 53e116fe9aa040cf5534bdd36614135507e2d236048c00b73dbba12208c07d369d3e2fe1930e3d6d7a8ee2b66a1702ef327ad6c92aa4b110b592ca6b89c3d683 WHIRLPOOL d3e5e01f6ad5f4c8658bebb16fd2a66110b017204b2777930ae85a7f526966043ad303e1513c5c268621f47b834d48adf26110da832421214e6818d3a4a4b6b1
