@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pgmagick
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pgmagick/ChangeLog,v 1.6 2015/03/16 05:22:00 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pgmagick/ChangeLog,v 1.7 2015/03/19 04:34:27 patrick Exp $
+
+*pgmagick-0.5.10 (19 Mar 2015)
+
+  19 Mar 2015; Patrick Lauer <patrick@gentoo.org> +pgmagick-0.5.10.ebuild:
+  Bump
 
 *pgmagick-0.5.9 (16 Mar 2015)
 
