@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/cytoolz
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/cytoolz/ChangeLog,v 1.7 2015/03/18 05:10:57 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/cytoolz/ChangeLog,v 1.8 2015/03/19 04:58:45 idella4 Exp $
+
+*cytoolz-0.7.2-r2 (19 Mar 2015)
+
+  19 Mar 2015; Ian Delaney <idella4@gentoo.org> +cytoolz-0.7.2-r2.ebuild,
+  -cytoolz-0.7.2-r1.ebuild, -cytoolz-0.7.2.ebuild:
+  revbump; add missed dep and update test phase, rm obsolete
 
 *cytoolz-0.7.2-r1 (18 Mar 2015)
 
